# ghost

./: .gitignore  ACKNOWLEDGMENTS.md  COMMERCIAL.md  CONTRIBUTING.md  DOCTRINE.md  GHOST.cursorrules  GHOST_DKA_TOOLSET.md  GHOST_DOCTRINE.md  GHOST_MANIFEST.md  GHOST_ROADMAP_CHECKLIST.md  LICENSE  README.md  pyproject.toml
config/: default.yaml
docs/: ARCHITECTURAL_SWEEP_PHASE5.md  FDX_OBSERVABILITY.md  GHOST_AUDIT_REPORT.md  GHOST_SHELL_ADAPTATION.md  GHOST_TRANSFORMATION_PLAN.md  PRODUCT_SUITE_DELIVERABLES.md
ghost_api/: __init__.py  app.py
ghost_app/: .gitignore  build.ps1  index.html  package-lock.json  package.json
ghost_app/src/: App.tsx
ghost_app/src-tauri/: Cargo.toml  tauri.conf.json
ghost_app/src-tauri/capabilities/: default.json
ghost_app/src-tauri/icons/: icon.icns
ghost_app/src-tauri/src/: lib.rs  main.rs
ghost_app/src-tauri/src/backend/: deploy_remediation.rs  discovery.rs  discovery_log.rs  fdx_log.rs  fdx_retrieval.rs  ghost_api.rs  ghost_deployer.rs  ghost_state.rs  hide_console.rs  mod.rs  offline_bundle.rs  predictive_failure.rs  trust_store.rs  worker_health_discovery.rs  worker_info.rs  ws_client.rs
ghost_app/src-tauri/src/backend/linux/: gpu_detection.rs  mod.rs  systemd_installer.rs  systemd_manager.rs
ghost_app/src-tauri/src/backend/transport/: mod.rs  tls_transport.rs
ghost_app/src-tauri/src/backend/windows/: gpu_detection.rs  mod.rs  service_installer.rs  service_manager.rs
ghost_app/src-tauri/src/security/: audit_logger.rs  dependency_integrity.rs  identity_manager.rs  mod.rs  signature_verifier.rs  tls_manager.rs
ghost_cli/: __init__.py  main.py
ghost_core/: __init__.py  bootstrap.py  config.py  contracts.py  metrics.py  storage.py  types.py
ghost_governance/: __init__.py  audit.py  policy.py  replay.py  store.py
ghost_installer/: CANONICAL_INSTALL_TAURI.md  EXAMPLES.md  README.md  UNINSTALLER.md  demo_installer.py  ghost_installer.ps1  ghost_installer.py  ghost_installer.spec  ghost_installer_windows.py  ghost_uninstaller.py  ghost_uninstaller.sh  ghost_wizard.py  legacy_installer_gate.py  offline_bundle.py  offline_bundle_lib.py  offline_install_helper.py  phantom_installer.sh  phantom_installer_windows.py  phantom_uninstaller.ps1  phantom_wizard.py  requirements-deploy.txt  windows_gui_installer.py
ghost_optimizer/: __init__.py  bandit.py  optimizer.py
(+113 files in other folders)
