[package]
name = "ghost_app"
version = "1.1.0"
description = "GHOST Distributed Compute Fabric — Sovereign Desktop Application"
authors = ["Dark North Co."]
edition = "2021"

[lib]
name = "ghost_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "net", "time", "sync", "macros", "io-util", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
# Phase 1: Identity (Ed25519 cryptographic signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
# Phase 2: TLS / certificates
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
# Phase 4: Audit logging
chrono = { version = "0.4", features = ["serde"] }
# Phase 6: System metrics
sysinfo = "0.32"
# Phase 7: Dependency integrity
sha2 = "0.10"
# Phase 10: WebSockets
tokio-tungstenite = "0.24"
futures-util = "0.3"
# LAN-agnostic worker discovery
local-ip-address = "0.6"

